overflow fix

--- a/css/main.css
+++ b/css/main.css
@@ -18,26 +18,17 @@ html, body {
     background-color: var(--background-color);
 }
 
-body {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100vh;
-    background-color: rgb(0, 0, 0);
-    overflow: hidden;
-}
-
-
 .top-bar {
     display: flex;
     align-items: center;
     width: 100%;
-    padding: 2px 4px;
+    padding: 2px 0;
     background-color: var(--theme-color);
 }
 
 .top-bar > svg {
     padding-right: 8px;
+    padding-left: 4px;
 }
 
 .title {
